<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OtherlandActivity" >

    <TextView
        android:id="@+id/otherland_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/name_label" />

    <TextView
        android:id="@+id/otherland_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_name_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/otherland_anthem_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/anthem_label" />

    <TextView
        android:id="@+id/otherland_anthem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_anthem_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/otherland_role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_anthem"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/role_label" />

    <TextView
        android:id="@+id/otherland_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_role_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/otherland_system_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_role"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/system_label" />

    <TextView
        android:id="@+id/otherland_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_system_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/otherland_religion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_system"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/religion_label" />

    <TextView
        android:id="@+id/otherland_religion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_religion_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/trade_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherland_religion"
        android:background="@drawable/buttonimg"
        android:onClick="onClickTrade"
        android:text="@string/trade_request_label" />

</RelativeLayout>