<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TradeActivity" >

    <TextView
        android:id="@+id/offer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer_label" />

    <ImageView
        android:id="@+id/res_gold_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/offer_label"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/goldicon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/offer_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/offer_label"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/res_gold_img"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/default_value" />

    <TextView
        android:id="@+id/demands_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/offer_field"
        android:text="@string/demands_label" />

    <ImageView
        android:id="@+id/res_whitecloud_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/demands_label"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/whitecloudicon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/demand_whitecloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/demands_label"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/res_whitecloud_img"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/default_value" />

    <ImageView
        android:id="@+id/res_thundercloud_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/res_whitecloud_img"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/thundercloudicon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/demand_thundercloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/demand_whitecloud"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/res_thundercloud_img"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/default_value" />

    <Button
        android:id="@+id/make_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/res_thundercloud_img"
        android:background="@drawable/buttonimg"
        android:onClick="onClickSendRequest"
        android:text="@string/make_request_label" />

</RelativeLayout>